--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="ua">
 	<head>
 		<title>Орієнтування</title>
 		
 		<style>
-			* {
+			/** {
 				box-sizing: border-box;
-			}
+			}*/
 			
 			body {
 				padding: 0 20px 0 20px;
