--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 				padding: 0 20px 0 20px;
 				font-family: sans-serif;
 			}
-
+/*
 			h1 {
 				text-align: center;
 				background-color: #ccc;
@@ -20,7 +20,7 @@
 			}
 
 			.content {
-				/*column-count: 3;*/
+				column-count: 3;
 				margin-top: 30px;
 				height: 100%;
 			}
@@ -74,6 +74,7 @@
 					font-size: 16px;
 				}
 			}
+			*/
 		</style>
 		
 	</head>
