--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	<body>
 
 		<h1>ОРІЄНТУВАННЯ</h1>
-		
+		без стиля
 		<input autocomplete="off" type="search" id="search" placeholder="Шукати по орієнтуванням..." />
 		
 		<div class="content">
