--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 	<body>
 
 		<h1>ОРІЄНТУВАННЯ</h1>
-		без стиля
+		Bootstrap <br>
 		<input autocomplete="off" type="search" id="search" placeholder="Шукати по орієнтуванням..." />
 		
 		<div class="content">
