--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 		<title>Орієнтування</title>
 		
 		<style>
+			body {
+				padding: 0 20px 0 20px;
+				font-size: 18px;
+			}
 			/*
 			
 			* {
