--- a/index.html
+++ b/index.html
@@ -87,14 +87,18 @@
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	</head>
 	<body>
-
-		<h1>ОРІЄНТУВАННЯ</h1>
-		Bootstrap <br>
-		<input autocomplete="off" type="search" id="search" placeholder="Шукати по орієнтуванням..." />
 		
+	<div class="container">
+	 	<h1>ОРІЄНТУВАННЯ</h1>
+		new1 <br>
+		
+		<input autocomplete="off" type="search" id="search" placeholder="Шукати по орієнтуванням..." />
+
 		<div class="content">
 			<ul id="results"></ul>			
 		</div>
+	</div>
+		
 		
 		<script>
 			const data = [
