--- a/index.html
+++ b/index.html
@@ -88,13 +88,17 @@
 	<body>
 		
 	<div class="container">
-	 	<h1>ОРІЄНТУВАННЯ</h1>
-		new1 <br>
-		
-		<input autocomplete="off" type="search" id="search" placeholder="Шукати по орієнтуванням..." />
+		<div class="row">
+			<div class="col">
+				<h1>ОРІЄНТУВАННЯ</h1>
+				new1 <br>
 
-		<div class="content">
-			<ul id="results"></ul>			
+				<input autocomplete="off" type="search" id="search" placeholder="Шукати по орієнтуванням..." />
+
+				<div class="content">
+					<ul id="results"></ul>			
+				</div>
+			</div>
 		</div>
 	</div>
 		
