--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html lang="ua">
-	<head>
-		<title>Орієнтування</title>
+  <head>
+	  
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>Орієнтування</title>
 		
 		<style>
 			body {
