--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
             { brand: "Хавал", number: "0687 " },
             { brand: "Ваз 2109", number: "0224" },
             { brand: "Форд транзит", number: "АА 299 G" },
+            { brand: "Ваз 2113", number: "АР 4958 ?" },
         ];
     
         const search = document.getElementById("search");
