--- a/index.html
+++ b/index.html
@@ -194,6 +194,38 @@
             { brand: "Ваз 2109", number: "0224" },
             { brand: "Форд транзит", number: "АА 299 G" },
             { brand: "Ваз 2113", number: "АР 4958 ?" },
+            { brand: "Mitsubishi L200", number: "АХ 3338 АХ" },
+            { brand: "Газель", number: "0994" },
+            { brand: "Нива", number: "АЕ 5173 МК" },
+            { brand: "Шкода", number: "АЕ 2289 АВ" },
+            { brand: "Volkswagen lt 35", number: "АХ 8081 ?" },
+            { brand: "Renault traffic", number: "АХ 6949 СМ" },
+            { brand: "Citroen jumper", number: "АХ 9906 ВА" },
+            { brand: "Газель", number: "AX 5930 АР" },
+            { brand: "Соболь", number: "АХ 0856 АХ" },
+            { brand: "Renault Duster", number: "ВЕ 9976 ВМ" },
+            { brand: "Нива", number: "ВЕ 1369 ВО" },
+            { brand: "Нива", number: "ВЕ 9968 ВМ " },
+            { brand: "Газель", number: "ВЕ 6963 ВО " },
+            { brand: "Поліцейські", number: " 1757" },
+            { brand: "Поліцейські", number: "6965" },
+            { brand: "Нива", number: "2333" },
+            { brand: " ", number: " " },
+            { brand: " ", number: " " },
+            { brand: " ", number: " " },
+            { brand: " ", number: " " },
+            { brand: " ", number: " " },
+            { brand: " ", number: " " },
+            { brand: " ", number: " " },
+            { brand: " ", number: " " },
+            { brand: " ", number: " " },
+            { brand: " ", number: " " },
+            { brand: " ", number: " " },
+            { brand: " ", number: " " },
+            { brand: " ", number: " " },
+            { brand: " ", number: " " },
+            { brand: " ", number: " " },
+            { brand: " ", number: " " },
         ];
     
         const search = document.getElementById("search");
