--- a/index.html
+++ b/index.html
@@ -210,22 +210,16 @@
             { brand: "Поліцейські", number: " 1757" },
             { brand: "Поліцейські", number: "6965" },
             { brand: "Нива", number: "2333" },
-            { brand: " ", number: " " },
-            { brand: " ", number: " " },
-            { brand: " ", number: " " },
-            { brand: " ", number: " " },
-            { brand: " ", number: " " },
-            { brand: " ", number: " " },
-            { brand: " ", number: " " },
-            { brand: " ", number: " " },
-            { brand: " ", number: " " },
-            { brand: " ", number: " " },
-            { brand: " ", number: " " },
-            { brand: " ", number: " " },
-            { brand: " ", number: " " },
-            { brand: " ", number: " " },
-            { brand: " ", number: " " },
-            { brand: " ", number: " " },
+            { brand: "Дастер", number: "СВ 137 В" },
+            { brand: "Амарок", number: "СВ 144 В" },
+            { brand: "Поліцейські", number: "1356" },
+            { brand: "Поліцейські", number: "0019" },
+            { brand: "Поліцейські", number: "1489" },
+            { brand: "Поліцейські", number: "1217" },
+            { brand: "Suzuki", number: "? 3367 ?" },
+            { brand: "УАЗ 3909", number: "АА 3199 РХ" },
+            { brand: "УАЗ 3909", number: "АА 3197 РХ" },
+            { brand: "Wolksvagen", number: "АХ 0860 СК" },
         ];
     
         const search = document.getElementById("search");
