--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
             { brand: "УАЗ 3909", number: "АА 3199 РХ" },
             { brand: "УАЗ 3909", number: "АА 3197 РХ" },
             { brand: "Wolksvagen", number: "АХ 0860 СК" },
+            { brand: "Ваз 2109", number: "АР 5224 НЕ" },
         ];
     
         const search = document.getElementById("search");
