--- a/index.html
+++ b/index.html
@@ -78,11 +78,13 @@
 </head>
 
 <body>
-
+    <div class="container-fluid">
+        <h1>ОРІЄНТУВАННЯ</h1>
+    </div>
+    
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1>ОРІЄНТУВАННЯ</h1>
 
                 <input autocomplete="off" type="search" id="search" placeholder="Шукати по орієнтуванням..." />
 
@@ -90,11 +92,14 @@
                     <ul id="results"></ul>
                 </div>
 
-                <footer>
-                    2022, Управління Патрульної Поліції в Запорізькій області
-                </footer>
             </div>
         </div>
+    </div>
+    
+    <div class="container-fluid">
+         <footer>
+            2022, Управління Патрульної Поліції в Запорізькій області
+         </footer>
     </div>
 
     <script>
