--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <title>Орієнтування</title>
 
     <style>
+        .container-fluid {
+            padding-right: 0 !important;
+            padding-left: 0 !important;
+        }
+        
         h1 {
             text-align: center;
             background-color: #ccc;
