--- a/index.html
+++ b/index.html
@@ -216,6 +216,9 @@
             { brand: "УАЗ 3909", number: "АА 3197 РХ" },
             { brand: "Wolksvagen", number: "АХ 0860 СК" },
             { brand: "Ваз 2109", number: "АР 5224 НЕ" },
+            { brand: "Богдан", number: "0643" },
+            { brand: "Таёта ленд крузер", number: "0657" },
+            //{ brand: " ", number: " " },
         ];
     
         const search = document.getElementById("search");
