--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
     <title>Орієнтування</title>
 
+    <link rel="stylesheet" href="style.css">
     <style>
         .container-fluid {
             padding-right: 0 !important;
