--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <body>
     <div class="container-fluid">
-        <h1>ОРІЄНТУВАННЯ</h1>
+        <h1 class="bg-dark bg-gradient">ОРІЄНТУВАННЯ</h1>
     </div>
     
     <div class="container">
