--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-               <input autocomplete="off" type="search" id="search" placeholder="Шукати по орієнтуванням..." /> 
+               <input autocomplete="off" type="search" id="search" class="form-control" placeholder="Шукати по орієнтуванням..." /> 
                 <div class="content">  
                     <ul id="results"></ul>
                 </div>
