--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="container-fluid">
-        <h1 class="bg-dark bg-gradient text-white">ОРІЄНТУВАННЯ</h1>
+        <h1 class="bg-dark bg-gradient text-danger">ОРІЄНТУВАННЯ</h1>
     </div>
     
     <div class="container">
