--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
+    <meta name="description" content="Орієнтування транспортних засобiв">
+    <!-- Open Graph data-->
+    <meta property="og:title" content="ОРІЄНТУВАННЯ">
+    <meta property="og:description"
+        content="Орієнтування транспортних засобiв" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://orientation.pp.ua/" />
+    <meta property="og:image" content="./images/ukraine.png">
+    <!--End Open Graph data-->
+    
     <title>Орієнтування</title>
 
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    
+    <link rel="shortcut icon" href="./images/ukraine.png" type="image/png">
 </head>
 
 <body>
