--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <meta property="og:url" content="https://orientation.pp.ua/" />
     <meta property="og:image" content="./images/ukraine.png">
     <!--End Open Graph data-->
+    <!-- BGcolor Theme -->
+    <meta name="msapplication-TileColor" content="#212529">
+    <meta name="theme-color" content="#212529">
+    <!-- //BGcolor Theme -->
     
     <title>Орієнтування</title>
 
