--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Орієнтування транспортних засобiв" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://orientation.pp.ua/" />
-    <meta property="og:image" content="./images/ukraine.png">
+    <meta property="og:image" content="./images/ukraine.webp">
     <!--End Open Graph data-->
     
     <!-- BGcolor Theme -->
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="shortcut icon" href="./images/ukraine.png" type="image/png">
+    <link rel="shortcut icon" href="./images/ukraine.webp" type="image/png">
     
 </head>
 
