--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 <body>
     <div class="container-fluid">
-        <h1 class="bg-dark bg-gradient text-danger">ОРІЄНТУВАННЯ</h1>
+        <h1 class="bg-dark text-danger">ОРІЄНТУВАННЯ</h1>
     </div>
     
     <div class="container">
