--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="./data.js"></script>
     <script src="./script.js"></script>
+    <script src="./pagination.js"></script>
     
 </body>
 
