--- a/index.html
+++ b/index.html
@@ -40,6 +40,18 @@
                <input autocomplete="off" type="search" id="search" class="form-control" placeholder="Шукати по орієнтуванням..." /> 
                 <div class="content">  
                     <ul id="results"></ul>
+                    
+                    <!-- partial:index.partial.html -->
+                    <div class="wrapper">
+                      <div class="pages"> <!-- Pages--> </div>
+                      <div class="paginator">
+                        <button type="button" class="arrow-left"> &#60 </button>
+                        <div class="page-nums"> <!-- Buttons with numbers--></div>
+                        <button type="button" class="arrow-right"> &#62 </button>
+                      </div>
+                    </div>
+                    <!-- partial -->
+                    
                 </div>
             </div>
         </div>
