--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
 </head>
 
-<body>
+<body  class="bg-dark text-white">
     <div class="container-fluid">
         <h2 class="bg-dark text-danger">ОРІЄНТУВАННЯ</h2>
     </div>
