--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 
 <body  class="bg-dark text-white">
-    <div class="container-fluid">
+    <div class="container">
         <header class="sticky">
             <h2 class="bg-dark text-danger">ОРІЄНТУВАННЯ</h2>
             <input autocomplete="off" type="search" id="search" class="form-control" placeholder="Шукати по орієнтуванням..." /> 
