--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 </head>
 
 <body  class="bg-dark text-white">
-    <div class="container">
-        <header class="sticky">
+    <div class="container sticky">
+        <header>
             <h2 class="bg-dark text-danger">ОРІЄНТУВАННЯ</h2>
             <input autocomplete="off" type="search" id="search" class="form-control" placeholder="Шукати по орієнтуванням..." /> 
         </header>
