--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 </head>
 
 <body  class="bg-dark text-white">
-    <div class="container sticky">
+    <div class="container bg-dark sticky">
         <header>
-            <h2 class="bg-dark text-danger">ОРІЄНТУВАННЯ</h2>
+            <h2 class="text-danger">ОРІЄНТУВАННЯ</h2>
             <input autocomplete="off" type="search" id="search" class="form-control" placeholder="Шукати по орієнтуванням..." /> 
         </header>
     </div>
