--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="row">
             <div class="col">
                 <div class="content">                    
-                    <ul id="results"></ul>    
+                    <ol id="results"></ol>    
                 </div>
             </div>
         </div>
