--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
 <body  class="bg-dark text-white">
     
+    <a href="#" id="go-top"><img src="./images/arrow-up-square.svg"></a>
+    
     <div class="container bg-dark sticky">
         <header>
             <h2 class="text-danger">ОРІЄНТУВАННЯ</h2>
