--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
 
 <body  class="bg-dark text-white">
     
+    <a href="#" id="scroll" style="display: none;"><span></span></a>
+    
     <div class="container bg-dark sticky">
         <header>
             <h2 class="text-danger">ОРІЄНТУВАННЯ</h2>
