--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </div>
     </div>
        
-    <a class="back_to_top">&uarr;</a>
+    <a class="scrollToTopBtn">&uarr;</a>
    
     
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
