--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
         </div>
     </div>
        
-   <button type="button" class="btn btn-light scrollToTopBtn" style="display: none;">&uarr;</button>
+   <button type="button" class="btn btn-light scrollToTopBtn" style="display: none;">
+        <img class="top-btn-img" src="/images/up-arrow_icon-icons.com_63400.svg">
+   </button>
    
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
