--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
 
 <body  class="bg-dark text-white">
     
+    <!-- Прелоадер -->
+    <div class="preloader">
+        <div class="preloader__row">
+          <div class="preloader__item"></div>
+          <div class="preloader__item"></div>
+        </div>
+    </div>
+    <!-- //Прелоадер -->
+    
     <div class="container bg-dark sticky">
         <header>
             <h2 class="text-danger tracking-in-expand">ОРІЄНТУВАННЯ</h2>
