--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
 <body  class="bg-dark text-white">
     
     <!-- Прелоадер -->
-    <div class="preloader">
+    <!--<div class="preloader">
         <div class="preloader__row">
           <div class="preloader__item"></div>
           <div class="preloader__item"></div>
         </div>
-    </div>
+    </div>-->
     <!-- //Прелоадер -->
     
     <div class="container bg-dark sticky">
