--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container bg-dark sticky">
         <header>
             <div class="img-mvs">
-                <img src="./images/mvs.png" alt="mvs">
+                <img src="./images/mvs.png" alt="mvs" class="img-mvs-anime">
             </div>
             <h2 class="text-danger tracking-in-expand">ОРІЄНТУВАННЯ</h2>
             <input autocomplete="off" type="search" id="search" class="form-control" placeholder="Шукати по орієнтуванням..." /> 
