--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
     
     <div class="container bg-dark sticky">
         <header>
-            <div class="img-mvs">
+           <!-- <div class="img-mvs">
                 <img src="./images/mvs.png" alt="mvs" class="img-mvs-anime">
-            </div>
+            </div>-->
             <h2 class="text-danger tracking-in-expand">ОРІЄНТУВАННЯ</h2>
             <input autocomplete="off" type="search" id="search" class="form-control" placeholder="Шукати по орієнтуванням..." /> 
         </header>
