--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     <div class="container bg-dark sticky">
         <header>
-            <h2 class="text-danger tracking-in-expand">ОРІЄНТУВАННЯ</h2>
+            <h2 title="ОРІЄНТУВАННЯ" class="text-danger tracking-in-expand">ОРІЄНТУВАННЯ</h2>
             <input autocomplete="off" type="search" id="search" class="form-control" placeholder="Шукати по орієнтуванням..." /> 
         </header>
     </div>
