--- a/index.html
+++ b/index.html
@@ -22,10 +22,14 @@
     
     <title>Орієнтування</title>
 
+    <!-- CSS Styles -->
     <link rel="stylesheet" href="style.css">
+    <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Shortcut Icon -->
     <link rel="shortcut icon" href="./images/ukraine.webp" type="image/png">
+    <!-- Google Fonts CDN -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&amp;display=swap" rel="stylesheet">
     
 </head>
@@ -53,6 +57,7 @@
         <img class="top-btn-img" src="/images/up-arrow_icon-icons.com_63400.svg">
    </button>
    
+    <!-- Bootstrap CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
             integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="./data.js"></script>
