--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <body>
     
-    <div class="container bg-dark sticky">
+    <div class="container sticky">
         <header>
             <h2 title="ОРІЄНТУВАННЯ" class="text-danger tracking-in-expand">ОРІЄНТУВАННЯ</h2>
             <input autocomplete="off" type="search" id="search" class="form-control" placeholder="Шукати по орієнтуванням..." /> 
