--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- Русский военный корабль иди на хуй! -->
 <!DOCTYPE html>
 <html lang="ua">
 
@@ -32,6 +33,9 @@
     <!-- Google Fonts CDN -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&amp;display=swap" rel="stylesheet">
     
+    <script>
+        console.log('Русский военный корабль иди на хуй!');
+    </script>
 </head>
 
 <body>
