--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     
     <div class="container sticky">
         <header>
-            <h2 title="ОРІЄНТУВАННЯ" class="text-danger tracking-in-expand">ОРІЄНТУВАННЯ</h2>
+            <h2 title="ОРІЄНТУВАННЯ" class="tracking-in-expand">ОРІЄНТУВАННЯ</h2>
             <input autocomplete="off" type="search" id="search" class="form-control" placeholder="Шукати по орієнтуванням..." /> 
         </header>
     </div>
