--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <div class="container sticky">
         <header>
             <h2 title="ОРІЄНТУВАННЯ" class="tracking-in-expand">ОРІЄНТУВАННЯ</h2>
-            <input autocomplete="off" type="search" id="search" class="form-control" placeholder="Шукати по орієнтуванням..." autofocus/> 
+            <input autocomplete="off" type="search" id="search" placeholder="Шукати по орієнтуванням..." autofocus/> 
         </header>
     </div>
     
