--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
     </div>
        
-   <button type="button" class="btn btn-light scrollToTopBtn" style="display: none;">
+   <button type="button" class="scrollToTopBtn" style="display: none;">
         <img class="top-btn-img" src="/images/up-arrow_icon-icons.com_63400.svg">
    </button>
    
