--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Shortcut Icon -->
     <link rel="shortcut icon" href="./images/ukraine.webp" type="image/png">
     <!-- Google Fonts CDN -->
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&amp;display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&amp;display=swap" rel="stylesheet"> -->
     
     <script>
         console.log('Русский военный корабль иди на хуй!');
