--- a/index.html
+++ b/index.html
@@ -64,12 +64,10 @@
         <img class="top-btn-img" src="/images/up-arrow_icon-icons.com_63400.svg">
    </button>
    
-    <!-- Bootstrap CDN -->
-    <!--<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
-            integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>-->
-    <script src="./data.js"></script>
-    <script src="./script.js"></script>
-    <script src="./go-top.js"></script>
+    
+    <script src="./js/data.js"></script>
+    <script src="./js/script.js"></script>
+    <script src="./js/go-top.js"></script>
     
 </body>
 
