--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div>
        
    <button type="button" class="scrollToTopBtn" style="display: none;">
-        <img class="top-btn-img" src="/images/up-arrow_icon-icons.com_63400.svg">
+        <img class="top-btn-img" src="/images/up-arrow_icon-icons.com_63400.svg" alt="GoTop">
    </button>
    
     
