--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- Русский военный корабль иди на хуй! -->
+<!-- Рускій воєнний корабль, іді нах#й! -->
 <!DOCTYPE html>
 <html lang="uk">
 
@@ -59,7 +59,7 @@
     <script src="./js/script.js"></script>
     <script src="./js/go-top.js"></script>
     <script>
-        console.log('Русский военный корабль иди на хуй!');
+        console.log('Рускій воєнний корабль, іді нах#й!');
     </script>
     
 </body>
