--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     
     <div class="container sticky">
         <header>
+            <marquee>
+                Увага! Особи за орієнтуванням при собі можуть мати автоматичну та іншу зброю. При затриманні дотримуватися заходів особистої безпеки! 
+            </marquee>
             <h2 title="ОРІЄНТУВАННЯ" class="tracking-in-expand">ОРІЄНТУВАННЯ</h2>
             <input autocomplete="off" type="search" id="search" placeholder="Шукати по орієнтуванням..." autofocus/> 
         </header>
