--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     
     <div class="container sticky">
         <header>
-            <marquee>
+            <marquee behavior="scroll">
                 Увага! Особи за орієнтуванням при собі можуть мати автоматичну та іншу зброю. При затриманні дотримуватися заходів особистої безпеки! 
             </marquee>
             <h2 title="ОРІЄНТУВАННЯ" class="tracking-in-expand">ОРІЄНТУВАННЯ</h2>
