--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     
     <div class="container sticky">
         <header>
-            <marquee behavior="scroll">
-                Увага! Особи за орієнтуванням при собі можуть мати автоматичну та іншу зброю. При затриманні дотримуватися заходів особистої безпеки! 
+            <marquee scrollamount="1" loop="3" behavior="scroll">
+                <strong>Увага! Особи за орієнтуванням при собі можуть мати автоматичну та іншу зброю. При затриманні дотримуватися заходів особистої безпеки!</strong>
             </marquee>
             <h2 title="ОРІЄНТУВАННЯ" class="tracking-in-expand">ОРІЄНТУВАННЯ</h2>
             <input autocomplete="off" type="search" id="search" placeholder="Шукати по орієнтуванням..." autofocus/> 
