--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <script src="./js/script.js"></script>
     <script src="./js/go-top.js"></script>
     <script>
-        console.log('Рускій воєнний корабль, іді нах#й!');
+        console.error('Рускій воєнний корабль, іді нах#й!');
     </script>
     
 </body>
