--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 let titleOrientation = document.createElement('h2');
                 titleOrientation.setAttribute('title', 'ОРІЄНТУВАННЯ');
                 titleOrientation.classList.add('tracking-in-expand');
+                titleOrientation.innerHTML = 'ОРІЄНТУВАННЯ';
                 header.appendChild(titleOrientation);
 
                 let inputSearch = document.createElement('input');
