--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 titleOrientation.innerHTML = 'ОРІЄНТУВАННЯ';
                 header.appendChild(titleOrientation);
 
-                let inputSearch = document.createElement('input').autofocus;
+                let inputSearch = document.createElement('input');
                 inputSearch.id = "search"; 
                 inputSearch.placeholder =  'Шукати по орієнтуванням...';
                 inputSearch.setAttribute('autocomplete', 'off');
