--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
                 let inputSearch = document.createElement('input');
                 inputSearch.id = "search"; 
+                inputSearch.autofocus = true;
                 inputSearch.placeholder =  'Шукати по орієнтуванням...';
                 inputSearch.setAttribute('autocomplete', 'off');
                 inputSearch.setAttribute('type', 'search');
