--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <img class="top-btn-img" src="/images/up-arrow_icon-icons.com_63400.svg" alt="GoTop">
    </button>
    
-    
+    <script src="./js/header.js"></script>
     <script src="./js/data.js"></script>
     <script src="./js/script.js"></script>
     <script src="./js/go-top.js"></script>
