--- a/404.html
+++ b/404.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>404 - сторінка не знайдена </title>
-  
+  <link rel="stylesheet" href="./css/style-404.html">
+	
   <style>
 	@import url(https://fonts.googleapis.com/css?family=Roboto:400,100,300,500);
 
