--- a/404.html
+++ b/404.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>404 - сторінка не знайдена </title>
+	
+  <!-- CSS Styles -->
   <link rel="stylesheet" href="./css/style-404.html">
 	<!--
   <style>
