--- a/404.html
+++ b/404.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="uk" >
-	<head>
-		  <meta charset="UTF-8">
-		  <title>404 - сторінка не знайдена </title>
+     <head>
+          <meta charset="UTF-8">
+          <title>404 - сторінка не знайдена </title>
 
-		  <!-- CSS Styles -->
-		  <link rel="stylesheet" href="./css/style-404.css">
+          <!-- CSS Styles -->
+          <link rel="stylesheet" href="./css/style-404.css">
 
-	</head>
-	<body>
+     </head>
+     <body>
 
-		<h1>404</h1>
-		<p>Ой! Щось не так.</p>
-		<a class="button" href="index.html"><i class="icon-home"></i>Повернутись на головну сторінку</a>
+          <h1>404</h1>
+          <p>Ой! Щось не так.</p>
+          <a class="button" href="index.html">
+		  <i class="icon-home"></i>
+		  Повернутись на головну сторінку
+	  </a>
 
-	</body>
+     </body>
 </html>
