--- a/404.html
+++ b/404.html
@@ -11,10 +11,11 @@
      <body>
 
           <h1>404</h1>
-          <p>Ой! Щось не так.</p>
+          <p>
+		Ой! Щось не так.
+	  </p>
           <a class="button" href="index.html">
-		  <i class="icon-home"></i>
-		  Повернутись на головну сторінку
+		Повернутись на головну сторінку
 	  </a>
 
      </body>
