--- a/weight.html
+++ b/weight.html
@@ -1,6 +1,10 @@
+<!doctype html>
+<html>
+    <head></head>
+    <body>
 <script>
-<p>Window height: <span id="height"></span></p>
-<p>Window width: <span id="width"></span></p>
+Window height: <span id="height"></span>
+Window width: <span id="width"></span>
     
 const heightOutput = document.querySelector("#height");
 const widthOutput = document.querySelector("#width");
@@ -12,3 +16,5 @@ function resizeListener() {
 
 window.addEventListener("resize", resizeListener);
 </script>
+    </body>
+</html>
