--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
             </div>
         </div>
 
-        <!-- Java Script -->   
-        <script src="./js/header.js"></script>
+        <!-- Java Script -->  
         <script src="./js/data.js"></script>
+        <script src="./js/header.js"></script>
+        <script src="./js/startPrint.js"></script>        
         <script src="./js/script.js"></script>
         <script src="./js/go-top.js"></script>
         <script>
