--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <!-- Java Script -->  
         <script src="./js/data.js"></script>
         <script src="./js/header.js"></script>
-        <script src="./js/startPrint.js"></script>        
+        <!--<script src="./js/startPrint.js"></script> -->       
         <script src="./js/script.js"></script>
         <script src="./js/go-top.js"></script>
         <script>
