--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     
     <body>
 
-        <div class="container sticky">
+        <div class="container-fluid sticky">
             <header id="header"></header>
         </div>
         <div class="container">
