--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     <body>
 
         <div class="container-fluid sticky">
-            <header id="header"></header>
+            <div class="container">
+                <header id="header"></header>
+            </div>
         </div>
         <div class="container">
             <div class="row">
