--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <!--<script src="./js/startPrint.js"></script> -->       
         <script src="./js/script.js"></script>
         <script src="./js/go-top.js"></script>
+        <script src="./libs/jspdf.min.js"></script>
         <script>
             console.error('Рускій воєнний корабль, іді нах#й!');
         </script>
