--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <script src="./js/script.js"></script>
         <script src="./js/go-top.js"></script>
         <script src="./libs/jspdf.min.js"></script>
+        <script src="./libs/jspdfSettings.js"></script>
         <script>
             console.error('Рускій воєнний корабль, іді нах#й!');
         </script>
