--- a/index.html
+++ b/index.html
@@ -40,13 +40,13 @@
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div class="content">                    
+                    <div  id="content" class="content">                    
                         <ol id="results"></ol>    
                     </div>
                 </div>
             </div>
         </div>
-
+        <a href="javascript:demoFromHTML()" class="button">Run Code</a>
         <!-- Java Script -->  
         <script src="./js/data.js"></script>
         <script src="./js/header.js"></script>
