--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
         <!-- CSS Styles -->
         <link rel="stylesheet" href="./css/style.css">
-
+        <link rel="stylesheet" href="./css/modal.css">
+        
         <!-- Shortcut Icon -->
         <link rel="shortcut icon" href="./images/ukraine.webp" type="image/png">
 
