--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <header id="header"></header>
             </div>
         </div>
-        <div class="container">
+        <div class="container height-content">
             <div class="row">
                 <div class="col">
                     <div  id="content" class="content">                    
@@ -46,7 +46,11 @@
                 </div>
             </div>
         </div>
-        
+        <div class="container">
+            <footer style="border-top: 1px solid #6c757d; margin-top: 10px;">
+                <p>Footer</p>
+            </footer>
+        </div>
         <!-- Java Script -->  
         <script src="./js/data.js"></script>
         <script src="./js/header.js"></script>    
