--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             </div>
         </div>
         <div class="container">
-            <footer style="border-top: 1px solid #6c757d; margin-top: 10px;">
-                <p>Footer</p>
+            <footer>
+                <p class="footer-info"></p>
             </footer>
         </div>
         <!-- Java Script -->  
