--- a/index.html
+++ b/index.html
@@ -47,10 +47,9 @@
             </div>
         </div>
         <div class="container">
-            <footer>
-                <p class="footer-info"></p>
-            </footer>
+            <footer id="footer"></footer>
         </div>
+        
         <!-- Java Script -->  
         <script src="./js/data.js"></script>
         <script src="./js/header.js"></script>    
