--- a/404.html
+++ b/404.html
@@ -83,7 +83,7 @@
           <p>
 		Ой! Щось не так.
 	  </p>
-          <a class="button" href="index.html">
+          <a class="button" href="https://orientation.pp.ua">
 		Повернутись на головну сторінку
 	  </a>
 
